[package]
name = "prql_ast"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.57"}
enum-as-inner = "0.6.0"
itertools = "0.11.0"
once_cell = "1.18.0"
regex = "1.9.0"
semver = {version = "1.0.14", features = ["serde"]}
serde = {version = "1.0.137", features = ["derive"]}
strum = {version = "0.25.0", features = ["std", "derive"]}
