[package]
name = "prql_ast"
version = "0.0.0"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.137", features = ["derive"]}
enum-as-inner = "0.6.0"
strum = {version = "0.25.0", features = ["std", "derive"]}
