[package]
description = "The AST for the PRQL language."
name = "prql_ast"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
enum-as-inner = "0.6.0"
semver = {version = "1.0.14", features = ["serde"]}
serde = {version = "1.0.137", features = ["derive"]}
strum = {version = "0.25.0", features = ["std", "derive"]}
