[package]
description = "CLI for the PRQL compiler"
name = "prqlc"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

metadata.msrv = "1.65.0"

[target.'cfg(not(target_family="wasm"))'.dependencies]
anstream = {version = "0.3.2", features = ["auto"]}
anyhow = {version = "1.0.57"}
ariadne = "0.3.0"
clap = {version = "4.3.0", features = ["derive", "env", "wrap_help"]}
clap_complete_command = "0.5.1"
clio = {version = "0.3.3", features = ['clap-parse']}
color-eyre = "0.6.1"
colorchoice = "1.0.0"
colorchoice-clap = "1.0.0"
env_logger = {version = "0.10.0", features = ["color"]}
itertools = "0.11.0"
notify = "^6.0.0"
prql-compiler = {path = '../prql_compiler', features = ["serde_yaml"]}
prql_ast = {path = '../prql_ast'}
regex = {version = "1.9.0", features = ["std", "unicode"]}
serde = "^1"
serde_json = "1.0.81"
serde_yaml = "0.9.1"
walkdir = "^2.3.2"

# We use minijinja just for the Jinja lexer, which is not part of the
# public interface which is covered by semver guarantees.
minijinja = {version = "=0.31.0", features = ["unstable_machinery"]}

[target.'cfg(not(target_family="wasm"))'.dev-dependencies]
insta = {version = "1.31", features = ["colors", "glob", "yaml"]}
insta-cmd = "0.3.0"
