[package]
description = "Query runner for PRQL"
name = "lutra"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
cli = ["clap"]
default = ["cli"]

[[bin]]
name = "lutra"
path = "src/cli.rs"
required-features = ["cli"]

[target.'cfg(not(target_family="wasm"))'.dependencies]
anyhow = "1.0.79"
clap = {version = "4.4.18", features = ["derive"], optional = true}
connectorx = {version = "0.3", features = ["dst_arrow2", "src_sqlite"]}
env_logger = "0.10.2"
log = "0.4.20"
prqlc = {path = "../../prqlc/prqlc", default-features = false}
walkdir = "2.4.0"
