[package]
description = "Query runner for PRQL"
name = "lutra"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
cli = ["clap"]
default = ["cli"]

[[bin]]
name = "lutra"
path = "src/cli.rs"
required-features = ["cli"]

[target.'cfg(not(target_family="wasm"))'.dependencies]
anyhow = "1.0.79"
arrow = {version = "49.0", features = ["prettyprint"], default-features = false}
clap = {version = "4.4.18", features = ["derive"], optional = true}
connector_arrow = {version = "0.2.0", features = ["src_sqlite"]}
env_logger = "0.11.0"
itertools = "0.12.0"
log = "0.4.20"
prqlc = {path = "../../prqlc/prqlc", version = "0.11.3", default-features = false}
rusqlite = {version = "0.30.0", features = ["bundled"]}
walkdir = "2.4.0"

[target.'cfg(not(target_family="wasm"))'.dev-dependencies]
insta = {version = "1.34", features = ["colors"]}
