[package]
description = "Query runner for PRQL"
name = "lutra"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
cli = ["clap"]
default = ["cli"]

[lib]
doctest = false
test = false

[[bin]]
name = "lutra"
path = "src/cli.rs"
required-features = ["cli"]
test = false

[target.'cfg(not(target_family="wasm"))'.dependencies]
anyhow = {workspace = true}
arrow = {version = "51.0", features = ["prettyprint"], default-features = false}
clap = {version = "4.4.18", features = ["derive"], optional = true}
connector_arrow = {version = "0.4.1", features = ["src_sqlite"]}
env_logger = "0.10.2"
itertools = {workspace = true}
log = {workspace = true}
prqlc = {path = "../../prqlc/prqlc", version = "0.11.5", default-features = false}
rusqlite = {version = "0.31.0", features = ["bundled"]}
walkdir = "2.5.0"

[target.'cfg(not(target_family="wasm"))'.dev-dependencies]
insta = {workspace = true}
