[package]
name = "prql-compiler-macros"
publish = false

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
doctest = false
proc_macro = true
test = false

[dependencies]
prql-compiler = {path = "..", default-features = false}
syn = "1.0"

[package.metadata.release]
tag-name = "{{version}}"
tag-prefix = ""
