[package]
description = "Macros for PRQL compilation at build time"
name = "prql-compiler-macros"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
doctest = false
proc_macro = true
test = false

[dependencies]
prql-compiler = {path = "..", default-features = false, version = "0.6.0" }
# Was getting build errors with more recent versions; can remove pin if it
# successfully builds.
syn = "=1.0.107"

[package.metadata.release]
tag-name = "{{version}}"
tag-prefix = ""
