[package]
description = "CLI interface for the PRQL compiler"
name = "prqlc"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[target.'cfg(not(target_family="wasm"))'.dependencies]
anyhow = {version = "1.0.57"}
ariadne = "0.1.5"
atty = "0.2.14"
clap = {version = "4.1.1", features = ["derive"]}
clio = {version = "0.2.4", features = ['clap-parse']}
color-eyre = "0.6.1"
env_logger = {version = "0.9.1", features = ["termcolor"]}
itertools = "0.10.3"
notify = "^5.1.0"
prql-compiler = {path = '..', version = "0.5.0" }
serde_json = "1.0.81"
serde_yaml = "0.9.1"
walkdir = "^2.3.2"

[target.'cfg(not(target_family="wasm"))'.dev-dependencies]
insta = {version = "1.26", features = ["colors", "glob", "yaml"]}
