[package]
description = "Macros for PRQL compilation at build time"
name = "prql-compiler-macros"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
doctest = false
proc_macro = true
test = false

[dependencies]
prql-compiler = {path = "../prql-compiler", default-features = false, version = "0.11.0" }
syn = "2.0.41"

[package.metadata.release]
tag-name = "{{version}}"
tag-prefix = ""
