[package]
description = "The AST for the PRQL language."
name = "prqlc-ast"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["anyhow"]

[lib]
doctest = false

[dependencies]
anyhow = {version = "1.0.79", optional = true}
enum-as-inner = "0.6.0"
semver = {version = "1.0.21", features = ["serde"]}
serde = {version = "1.0.196", features = ["derive"]}
strum = {version = "0.26.1", features = ["std", "derive"]}

[dev-dependencies]
insta = {workspace = true}
serde_json = "1.0.113"
