[package]
description = "The AST for the PRQL language."
name = "prqlc-ast"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
doctest = false

[dependencies]
enum-as-inner = "0.6.0"
semver = {version = "1.0.23", features = ["serde"]}
serde = {workspace = true}
strum = {version = "0.26.2", features = ["std", "derive"]}

[dev-dependencies]
insta = {workspace = true}
serde_json = "1.0.117"
