[package]
description = "The AST for the PRQL language."
name = "prqlc-ast"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
doctest = false

[dependencies]
enum-as-inner = "0.6.0"
semver = {version = "1.0.23", features = ["serde"]}
serde = {workspace = true}
serde_yaml = {workspace = true, optional = true}
strum = {version = "0.26.2", features = ["std", "derive"]}

# Chumsky's default features have issues when running in wasm (though we only
# see it when compiling on macOS), so we only include features when running
# outside wasm.
[target.'cfg(not(target_family="wasm"))'.dependencies]
chumsky = "0.9.2"
# Not direct dependencies, but pinning because of bugs in previous versions
stacker = "0.1.15"
[target.'cfg(target_family="wasm")'.dependencies]
chumsky = {version = "0.9.2", features = ["ahash", "std"], default-features = false}



[dev-dependencies]
insta = {workspace = true}
serde_json = {workspace = true}
