[package]
description = "CLI for the PRQL compiler — compiles PRQL to SQL."
name = "prqlc-cli"

edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

# No rust-version constraint — CLI can track latest deps freely.

build = "build.rs"

[features]
default = ["lsp"]
lsp = ["lsp-server", "lsp-types"]

[[bin]]
name = "prqlc"
path = "src/main.rs"

[dependencies]
prqlc = { path = "../prqlc", features = ["display", "serde_yaml"] }

anyhow = { version = "1.0.102", features = ["backtrace"] }
anstream = { version = "1.0.0", features = ["auto"] }
ariadne = "0.5.1"
clap = { version = "4.5.53", features = ["derive", "env", "wrap_help"] }
clap_complete_command = "0.5.1"
clio = { version = "0.3.3", features = ["clap-parse"] }
color-eyre = "0.6.5"
colorchoice-clap = "1.0.0"
is-terminal = "0.4.17"
itertools = { workspace = true }
log = { workspace = true }
minijinja = { version = "2.18.0", features = ["unstable_machinery"] }
notify = "7.0.0"
regex = "1.12.3"
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
walkdir = "2.5.0"

lsp-server = { version = "0.7.9", optional = true }
lsp-types = { version = "0.97.0", optional = true }

[build-dependencies]
vergen-gitcl = { version = "1.0.0", features = ["build"] }

[dev-dependencies]
insta = { workspace = true }
insta-cmd = { workspace = true }
similar = { workspace = true }
similar-asserts = { workspace = true }
tempfile = "3.27.0"
walkdir = "2.5.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
result_large_err = "allow"
