[package]
description = "A parser for the PRQL query language."
name = "prqlc-parser"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
bench = false
doctest = false

[dependencies]
enum-as-inner = {workspace = true}
itertools = {workspace = true}
log = {workspace = true}
schemars = {workspace = true}
semver = {version = "1.0.26", features = ["serde"]}
serde = {workspace = true}
serde_yaml = {workspace = true, optional = true}
strum = {workspace = true}

# Chumsky's default features have issues when running in wasm (though we only
# see it when compiling on macOS), so we only include features when running
# outside wasm.
[target.'cfg(not(target_family="wasm"))'.dependencies]
chumsky = "0.9.2"
# Not direct dependencies, but pinning because of bugs in previous versions
stacker = "0.1.21"
[target.'cfg(target_family="wasm")'.dependencies]
chumsky = {version = "0.9.2", features = ["ahash", "std"], default-features = false}

[dev-dependencies]
insta = {workspace = true}
serde_json = {workspace = true}

[lints.rust]
# https://github.com/taiki-e/cargo-llvm-cov/blob/4039500dc7ce5874748769166f1f481be294c90f/README.md#exclude-function-from-coverage
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)']}
unsafe_code = "forbid"
